--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "electron": "^30.0.1",
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
     "websocket": "^1.0.34",
